# zio

./: Makefile.am  Makefile.in  autogen.sh  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
doc/: Makefile.am  Makefile.in  doxygen.conf.in
examples/: test_audio.c  test_dht.c  test_itemp.c  test_lcd.c  test_motion.c  test_rtc.c  test_therm.c  test_thermistor.c  test_yl40.c
src/core/: Makefile.am  Makefile.in  core.h  core_error.c  core_error.h  core_main.c  zio.h  zio_audio.c  zio_audio.h  zio_ctl.c  zio_ctl.h  zio_cycle.c  zio_cycle.h  zio_debug.c  zio_debug.h  zio_dev.c  zio_dev.h  zio_dht.c  zio_dht.h  zio_dummy_temp.c  zio_dummy_temp.h  zio_error.h  zio_geo.c  zio_gps.c  zio_gps.h  zio_gyro.c  zio_gyro.h  zio_i2c.c  zio_i2c.h  zio_itemp.c  zio_itemp.h  zio_mod.c  zio_mod.h  zio_motion.c  zio_motion.h  zio_obj.c  zio_pin.c  zio_pin.h  zio_speaker.c  zio_speaker.h  (+5 more)
src/core/dev/: dev_air.c  dev_air.h  dev_debug.c  dev_debug.h  dev_dht.c  dev_dht.h  dev_dummy_temp.c  dev_geo.c  dev_geo.h  dev_gps.c  dev_gps.h  dev_itemp.c  dev_itemp.h  dev_itime.c  dev_lcd.c  dev_lcd.h  dev_lcd_ssd1306.c  dev_lcd_ssd1306.h  dev_lcd_twi1602.c  dev_ldr.c  dev_ldr.h  dev_led.c  dev_log.c  dev_log.h  dev_mood.c  dev_motion.c  dev_motion.h  dev_rtc.c  dev_rtemp.c  dev_sc16is.c  dev_sc16is.h  dev_sgp30.c  dev_sgp30.h  dev_speaker.c  dev_speaker.h  dev_therm.c  dev_thermistor.c  dev_thermistor.h  dev_time.c  dev_time.h  (+2 more)
src/libhtm/: Makefile.am  Makefile.in  README.md  autogen.sh  config.h.in  configure  configure.ac  htm.h  htm.pc  htm_audio.h  htm_brane.c  htm_brane.h  htm_cache.c  htm_cache.h  htm_celerity.h  htm_cell.c  htm_chord.c  htm_chord.h  htm_control.c  htm_control.h  htm_emo.c  htm_emo.h  htm_entity.c  htm_entity.h  htm_exec.c  htm_exec.h  htm_exec_work.c  htm_exec_work.h  htm_image.c  htm_layer.c  htm_layer.h  htm_mem.c  htm_motor.c  htm_neo.c  htm_path.c  htm_path.h  htm_sense.c  htm_sense.h  htm_struct.h  htm_tree.c  (+1 more)
src/libhtm/op/: htm_op_feedback.c  htm_op_seq.c
src/libhtm/src/: Makefile.am  Makefile.in  htm  htm.h  htm_audio.c  htm_brane.c  htm_brane.h  htm_celerity.c  htm_cell.c  htm_cell.h  htm_chord.c  htm_chord.h  htm_control.c  htm_control.h  htm_emo.c  htm_entity.c  htm_entity.h  htm_exec.c  htm_image.h  htm_laplace.cpp  htm_map.c  htm_map.h  htm_mem.c  htm_mem.h  htm_motor.h  htm_neo.c  htm_neo.h  htm_path.c  htm_path.h  htm_position.c  htm_position.h  htm_struct.h  htm_time.c  htm_time.h  htm_tree.h  htm_vision.h  htm_zpu.c  htm_zpu.h  mk.sh  o
src/libhtm/src/example/: mlp.c  mlp.h
src/libhtm/src/lang/: lang_char.c  lang_char.h  lang_char_b.c  lang_char_c.c  lang_char_d.c  lang_char_e.c
src/libhtm/src/op/: htm_op.h  htm_op_pool.c  htm_op_reset.c
src/libhtm/src/quat/: mk.sh  quat  quat.c  quat.h  quat_alloc.c  quat_decode.c  quat_encode.c  quat_get.c  quat_op.c  quat_op.h  quat_prec.c  quat_set.c  quat_string.c
src/libhtm/src/sys/: .htm_time.h.swo  htm_adler64.c  htm_adler64.h  htm_laplace.h  htm_map.c  htm_time.c
src/libhtm/src/util/: htm_buff.c  htm_buff.h  htm_time.h
src/libhtm/test/: Makefile.am  Makefile.in  test_lang.c  test_libhtm.c  test_libhtm.h  test_libhtm_celerity.c  test_libhtm_mem.c  test_libhtm_position.c  test_libhtm_zpu.c
src/libquat/: Makefile.am  Makefile.in  quat.c  quat.h  quat_alloc.c  quat_decode.c  quat_encode.c  quat_get.c  quat_op.c  quat_op.h  quat_set.c  quat_string.c
src/libquat/test/: Makefile.am  Makefile.in  test_libquat.c  test_libquat.h  test_libquat_math.c
src/libzdb/: Makefile.am  Makefile.in  zdb.h  zdb_arch.c  zdb_arch.h  zdb_block.c  zdb_block.h  zdb_fmap.c  zdb_fmap.h  zdb_index.c  zdb_index.h  zdb_mutex.c  zdb_mutex.h  zdb_table.c  zdb_table.h
src/libzio/: Makefile.am  Makefile.in  zio.h  zio_audio.c  zio_audio.h  zio_cycle.c  zio_cycle.h  zio_dev.c  zio_dev.h  zio_error.h  zio_geo.c  zio_geo.h  zio_mod.c  zio_mod.h  zio_obj.h  zio_status.c  zio_status.h  zio_time.c  zio_time.h
src/libzio/dev/: dev_air.c  dev_air.h  dev_audio.c  dev_audio.h  dev_comm.c  dev_comm.h  dev_debug.c  dev_dht.c  dev_diag.c  dev_diag.h  dev_dummy_temp.h  dev_geo.c  dev_geo.h  dev_gps.c  dev_gtime.c  dev_gtime.h  dev_itemp.c  dev_itemp.h  dev_itime.c  dev_itime.h  dev_lcd_ssd1306.c  dev_lcd_twi1602.c  dev_lcd_twi1602.h  dev_ldr.c  dev_led.c  dev_led.h  dev_log.c  dev_log.h  dev_lux.c  dev_lux.h  dev_mood.c  dev_mood.h  dev_motion.c  dev_rtc.c  dev_rtc.h  dev_rtemp.c  dev_rtemp.h  dev_sc16is.c  dev_sgp30.c  dev_speaker.c  (+7 more)
src/libzio/examples/: test_air.c  test_dht.c  test_gps.c  test_lcd.c  test_motion.c  test_thermistor.c  test_yl40.c
src/libzpu/: Makefile.am  Makefile.in  zpu.h  zpu_bios.h  zpu_exec.c  zpu_exec.h  zpu_init.c  zpu_init.h  zpu_nbus.c  zpu_nbus.h  zpu_opcode.c  zpu_opcode.h  zpu_processor.c  zpu_processor.h  zpu_reg.c  zpu_reg.h  zpu_vaddr.c  zpu_vaddr.h  zpu_vaddr_io.c  zpu_vaddr_io.h  zpu_vaddr_rom.c  zpu_vaddr_rom.h
src/libzpu/test/: Makefile.am  Makefile.in  test_libzpu.c  test_libzpu.h  test_libzpu_bios.c  test_libzpu_math.c  test_libzpu_vaddr.c
src/libzsys/: Makefile.am  Makefile.in  zsys.h  zsys_adler64.c  zsys_adler64.h  zsys_buff.c  zsys_error.c  zsys_error.h  zsys_font.c  zsys_font.h  zsys_image.c  zsys_image.h  zsys_laplace.cpp  zsys_laplace.h  zsys_log.c  zsys_log.h  zsys_map.c  zsys_map.h  zsys_path.c  zsys_path.h  zsys_string.c  zsys_string.h  zsys_time.c  zsys_time.h
src/zio-console/: Makefile.am  Makefile.in  con_main.c
src/zio-daemon/: Makefile.am  Makefile.in  ziod.h  ziod_error.c  ziod_error.h  ziod_log.c  ziod_log.h  ziod_main.c  ziod_main.h  ziod_opt.c  ziod_opt.h  ziod_therm.c  ziod_therm.h
